# mflow

./: README.md  package.json  vite.config.ts
.github/workflows/: release.yml
cmd/: Cargo.toml
cmd/src/: main.rs
src/: App.css  App.jsx  App.tsx  AppConfig.css  AppConfig.tsx  AppExport.css  AppExport.tsx  OpenSaveProject.css  OpenSaveProject.tsx  config.ts  fromTauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  main.rs  win.rs
src/assets/: mutil-account.xml
src/blocks/: customBlocks.ts  generators.js  generators.ts
src/components/: BlocklyComponent.jsx
