[package]
name = "mflow-cmd"
version = "0.1.0"
edition = "2024"

[dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "securitybaseapi", "shellapi", "winuser"] }
windows = { version = "0.61.3", features = [
    "Win32", 
    "Win32_Foundation", 
    "Win32_Security", 
    "Win32_System", 
    "Win32_System_Threading",
    "Win32_UI", 
    "Win32_UI_Shell", 
    "Win32_UI_WindowsAndMessaging"
] }
